<resources>
    <string name="app_name">IOASYS EMPRESAS</string>

    <string name="password">Senha</string>
    <string name="email">E-mail</string>
    <string name="welcome">BEM-VINDO AO EMPRESAS</string>
    <string name="textLoren">Lorem ipsum dolor si, lorem ipsum dolor si lorem ipsum dolor si</string>
    <string name="logo">logo empresa ioasys</string>
    <string name="enter">Entrar</string>
    <string name="validate">Todos os campos são obrigatórios</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="errorLogin">Verifique os dados de acesso</string>
    <string name="pass_error">Senha inválida</string>
    <string name="email_error">E-mail inválido</string>
    <string name="title">AppBAr</string>
    <string name="search_hint">digite aqui ...</string>
    <string name="search">Pesquisar</string>
    <string name="not_found_text">Nenhum registro encontrado</string>

</resources>