<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/beige"
    android:id="@+id/snackbar_action"
    tools:context=".view.LoginFragment">

        <ImageView
            android:id="@+id/imCompany"
            android:layout_width="184.5dp"
            android:layout_height="45dp"
            android:layout_marginTop="100dp"
            android:contentDescription="@string/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/logo_ioasys"
            app:tint="@color/pink" />

        <TextView
            android:id="@+id/welcome"
            android:layout_width="146.5dp"
            android:layout_height="47dp"
            android:layout_marginTop="50dp"
            android:fontFamily="sans-serif"
            android:text="@string/welcome"
            android:textAlignment="center"
            android:textColor="@color/txt_style"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imCompany" />

        <TextView
            android:id="@+id/textLoren"
            android:layout_width="273dp"
            android:layout_height="39dp"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif"
            android:text="@string/textLoren"
            android:textAlignment="center"
            android:textColor="@color/txt_style"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/welcome" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="45dp"
            android:hint="@string/email"
            app:layout_constraintTop_toBottomOf="@id/textLoren"
            app:startIconContentDescription="@string/email"
            app:startIconDrawable="@drawable/ic_mail"
            app:startIconTint="@color/pink">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/beige"
                android:fontFamily="sans-serif"
                android:inputType="text"
                android:text="testeapple@ioasys.com.br"
                android:textColor="@color/txt_style2"
                android:textSize="17sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="45dp"
            android:hint="@string/password"
            app:errorEnabled="false"
            app:layout_constraintTop_toBottomOf="@id/email"
            app:startIconContentDescription="@string/password"
            app:startIconDrawable="@drawable/ic_padlock"
            app:startIconTint="@color/pink">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/beige"
                android:fontFamily="sans-serif"
                android:text="12341234"
                android:inputType="numberPassword"
                android:textColor="@color/txt_style2"
                android:textSize="17sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/green_blue"
            android:text="@string/enter"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="@+id/password"
            app:layout_constraintStart_toStartOf="@+id/password"
            app:layout_constraintTop_toBottomOf="@+id/password" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="66dp"
            android:layout_height="66dp"
            android:visibility="gone"
            tools:visibility="visible"
            android:indeterminateTint="@color/pink"
            android:indeterminateTintMode="src_in"
            android:progressBackgroundTintMode="multiply"
           app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
